nldl_derive/tests/ui/deserializable/nla-type-duplicate-fails.stderr
error[E0081]: discriminant value `0` already exists
  --> tests/ui/deserializable/nla-type-duplicate-fails.rs:11:16
   |
9  |     #[nla_type(0)]
   |                - first use of `0`
10 |     Unspec,
11 |     #[nla_type(crate::ZERO)]
   |                ^^^^^^^^^^^ enum already has `0`
